# Riko-V2

./: .gitignore  INSTALL.sh  README.md  package-lock.json  package.json
scripts/: publish_update.sh
src/: index.html  script.js  setup.css  setup.html  setup.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hardware.rs  lib.rs  main.rs  ollama.rs  setup.rs
