[package]
name = "riko-roast"
version = "0.1.1"
description = "RikoRoast — your personal AI companion"
authors = ["Gabriel"]
edition = "2021"

[lib]
name = "riko_roast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "riko-roast"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs    = "2"
tauri-plugin-updater = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
# async-only reqwest — no blocking feature needed (removed to avoid deadlock risk)
reqwest            = { version = "0.12", features = ["json", "stream"] }
futures-util       = "0.3"
sysinfo            = "0.30"
which              = "6"
anyhow             = "1"
url                = "2"
base64             = "0.22"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
